--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   permission_handler: ^12.0.1
   open_file: ^3.2.1
   intl: ^0.19.0
+  flutter_pdfview: ^1.3.2
 
 dev_dependencies:
   flutter_test:
