--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,8 @@ dependencies:
   open_file: ^3.2.1
   intl: ^0.19.0
   flutter_pdfview: ^1.3.2
+  pdf: ^3.11.0
+  printing: ^5.10.0
 
 dev_dependencies:
   flutter_test:
