--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,8 @@ dependencies:
   flutter_pdfview: ^1.3.2
   pdf: ^3.11.0
   printing: ^5.10.0
+  onesignal_flutter: ^5.1.0
+  image_picker: ^1.0.7
 
 dev_dependencies:
   flutter_test:
